--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.1.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.6.2",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
